fixed library installed list display

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://77a90bf0-6052-467b-a0ce-62405dcba39b.preview.emergentagent.com
-WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=http://localhost:8000
+WDS_SOCKET_PORT=0
