--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "ajv": "^8.12.0",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
     "lucide-react": "^0.525.0",
     "monaco-editor": "^0.52.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-monaco-editor": "^0.58.0",
-    "react-router-dom": "^7.5.1",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
-    "recharts": "^3.1.0"
+    "recharts": "^2.12.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -34,7 +35,7 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
+    "@craco/craco": "^7.0.0-alpha.0",
     "@eslint/js": "9.23.0",
     "autoprefixer": "^10.4.20",
     "eslint": "9.23.0",
