--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@monaco-editor/react": "^4.7.0",
+    "@supabase/supabase-js": "^2.52.0",
     "ajv": "^8.12.0",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
@@ -16,7 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-monaco-editor": "^0.58.0",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.0"
   },
